k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-deploy-lab
  namespace: go-deploy-lab
spec:
  selector:
    app: go-deploy-lab
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
