k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-deploy-lab
  namespace: go-deploy-lab
spec:
  ingressClassName: nginx
  rules:
    - host: go-deploy-lab.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-deploy-lab
                port:
                  number: 80
